--- a/views/admin/show_news.ejs
+++ b/views/admin/show_news.ejs
@@ -19,15 +19,15 @@
               <!-- /.box-warning -->
               
               <!-- /.box-alert -->
-                                
+                <% if (messages.info) { %>               
               <div class="box-body">
                 <div class="alert alert-success alert-dismissible">
                   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                   <h4><i class="icon fa fa-check"></i> Alert!</h4>
-                  Success alert preview. This alert is dismissable.
+                  <%= messages.info %>
                 </div>
               </div>
-              
+              <% } %>
               <!-- /.box-header -->
               <div class="box-body table-responsive no-padding">
                 <table class="table table-hover">
@@ -66,7 +66,7 @@
                        
                     <td><%= data[i].description%><a href="#">read more</a></td>
                     <td>
-                      <a class="btn btn-warning" href="#"><i class="glyphicon glyphicon-edit"></i></a>                      
+                      <a class="btn btn-warning" href="/express/admin/edit_news/<%= data[i].id_news %>"><i class="glyphicon glyphicon-edit"></i></a>                      
                       <a class="btn btn-danger" href="#"><i class="glyphicon glyphicon-trash"></i></a>
                     </td>
                   </tr>    
