--- a/views/admin/show_news.ejs
+++ b/views/admin/show_news.ejs
@@ -67,7 +67,7 @@
                     <td><%= data[i].description%><a href="#">read more</a></td>
                     <td>
                       <a class="btn btn-warning" href="/express/admin/edit_news/<%= data[i].id_news %>"><i class="glyphicon glyphicon-edit"></i></a>                      
-                      <a class="btn btn-danger" href="#"><i class="glyphicon glyphicon-trash"></i></a>
+                      <a class="btn btn-danger" href="/express/admin/delete_news/<%= data[i].id_news %>"onclick="return confirm('Are you sure want to delete id_news=' + <%= data[i].id_news %> + '?')"><i class="glyphicon glyphicon-trash"></i></a>
                     </td>
                   </tr>    
                   <%
